--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>雷火Web App</title>
+    <title>雷火APP</title>
 
     <base href="/" />
 
@@ -19,13 +19,15 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="%PUBLIC_URL%/assets/icon/favicon.png"
+      sizes="64x64"
+      href="%PUBLIC_URL%/assets/icon/logo-web-mini.png"
     />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
+    <meta name="apple-mobile-web-app-title" content="雷火APP" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" sizes="64x64" href="%PUBLIC_URL%/assets/icon/logo-web.png" /> 
   </head>
 
   <body>
