进行相关设置，使得手机添加桌面图标方便

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,13 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="雷火APP" />
+    <meta name="apple-mobile-web-app-title" content="雷火WEB版" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="apple-touch-icon" sizes="64x64" href="%PUBLIC_URL%/assets/icon/logo-web.png" /> 
+    <link
+      rel="apple-touch-icon"
+      sizes="64x64"
+      href="%PUBLIC_URL%/assets/icon/logo-web.png"
+    />
   </head>
 
   <body>
