详情页接口联调

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
       sizes="64x64"
       href="%PUBLIC_URL%/assets/icon/logo-web.png"
     />
-    <script src="http://localhost:3000/webApp/assets/js/third-party-lib/babel.min.js"></script>
-    <script src="http://localhost:3000/webApp/assets/js/third-party-lib/react.production.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/third-party-lib/babel.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/third-party-lib/react.production.min.js"></script>
   </head>
 
   <body>
